# qiita_fiware_camera

./: LICENSE  README.md
camera_client/: main.py  pyproject.toml
camera_client/camera_client/: blob_storage.py  camera.py  fiware.py  gnss.py
installation/: 01_azure_login.sh  02_azure_create_resourcegroup.sh  03_azure_start_aks.sh  04_azure_blobstorage.sh  05_fiware_start_mongodb.sh  06_fiware_setup_mongodb.sh  07_fiware_start_orion.sh  08_fiware_start_cygnus.sh  09_kong_start_kong.sh  10_fiware_start_cert-manager.sh  11_fiware_setup_kong.sh
installation/yaml/: certmanager-clusterissure.yaml  cygnus-deployment.yaml  cygnus-service.yaml  kong-consumers.yaml  kong-ingress.yaml  kong-plugins.yaml  mongodb-values.yaml  orion-deployment.yaml  orion-ingress.yaml  orion-service.yaml
setup/: 01_create_camera_entity.sh  02_subscribe_camera_entity.sh
variables/: 01_azure_storage_connectionstring.sh  env.temp
